trying to fix nav item spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -575,9 +575,9 @@ button {
     left: 0;
   }
 
-  .nav-item {
+  /*.nav-item {
     margin: 1.5rem 0;
-  }
+  }*/
 
   /*.hamburger {
     display: block;
